--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
+    "react-transition-group": "^4.4.5",
     "swiper": "^11.1.4",
     "tar": "^7.2.0",
     "web-vitals": "^2.1.4"
